Fixed broken link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<h1> Cody Hoffman's Home Page </h1>
 
-		<a href="/HW2/resume.html"> Resume </a>
+		<a href="/hw2/resume.html"> Resume </a>
 		
 		<br><br><br>
 		
