--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 	<body>
 		<h1> Cody Hoffman's Web Page </h1>
 
-		<a href="/HW2/index.html"> Home </a>
+		<a href="/hw2/index.html"> Index </a>
 		
 		<br><br><br>
 		
