Add content index.html

--- a/index.html
+++ b/index.html
@@ -1,23 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 
-	<head>
-		<meta charset="utf-8">
-		<title> Cody Hoffman </title>
-	</head>
+<head>
+	<meta charset="utf-8">
+	<title> Cody Hoffman </title>
+	<link rel="stylesheet" type="text/css" href="./style.css" />
+</head>
 
-	<body>
-		<h1> Cody Hoffman's Home Page </h1>
+<body>
+<h1> Cody Hoffman's Home Page </h1>
 
-		<a href="/hw2/resume.html"> Resume </a>
-		
-		<br><br><br>
-		
-		<h3> About Me </h3>
-		<h4> School </h4>
-		<h4> Programming Experience </h4>
-		<h4> Guitar </h4>
-		
-	</body>
+<a href="/hw2/resume.html"> Resume </a>
+
+<br>
+
+<h3> About Me </h3>
+
+<h4> Background </h4>
+<ul>
+	<li> Hometown: Cascade, IA </li>
+	<li> Major: Computer Science </li>
+	<li> Age: 21 </li>
+</ul>
+
+<h4> Technology Experience </h4>
+<p> I've taken a variety of programming classes throughout my time as a CS student, completed an internship <br>
+	as a Software Developer for the ITA Group in West Des Moines, Iowa this past summer, and I also enjoy <br>
+	working on personal projects when time allows. I have experience in a variety of different technologies including:
+<ul>
+	<li> Python </li>
+	<li> Swift </li>
+	<li> C# </li>
+	<li> F# </li>
+	<li> Java </li>
+	<li> MicroSoft SQL Server </li>
+	<li> MySQL </li>
+	<li> C/C++ </li>
+</ul>
+My favorite programming language would probably be Python. I think it is a really awesome, versatile language<br>
+that is used heavily in a variety of different industries like Data Science, Web Development, and Education.
+</p>
+<h4> Hobbies </h4>
+<ul>
+	<li> Golf </li>
+	<li> Boating </li>
+	<li> Playing Guitar </li>
+	<li> Video Games s</li>
+</ul>
+
+</body>
 
 </html>
+
