Styled index.html, added file style.css

--- a/index.html
+++ b/index.html
@@ -8,25 +8,34 @@
 </head>
 
 <body>
-	<h1> Cody Hoffman's Home Page </h1>
 
-	<a href="/hw2/resume.html"> Resume </a>
+	<div id="head">
+		<nav>
+			<ul style="list-style-type:none" id="menu">
+				<h1> Cody Hoffman </h1>
+				<li class="menuItem"> <a href="index.html"> Home </a> </li>
+				<li class="menuItem"> <a href="resume.html"> Resume </a> </li>
+				<li class="menuItem"> <a href="https://www.linkedin.com/in/cody-hoffman-618557121" > LinkedIn </a> </li>
+				<li class="menuItem"> <a href="https://github.com/codyhoffman" > GitHub </a> </li>
+				<li class="menuItem"> <a href="http://www.cody-codes.com" > Portfolio </a></li>
+			</ul>
+		</nav>
+	</div>
 
-	<br>
-
-	<h3> About Me </h3>
-
-	<h4> Background </h4>
+	<br><br><br><br><br>
+	<div id="wrap">
+	<h3> Background </h3>
 		<ul>
 			<li> Hometown: Cascade, IA </li>
 			<li> Major: Computer Science </li>
 			<li> Age: 21 </li>
 		</ul>
 
-	<h4> Technology Experience </h4>
-		<p> I've taken a variety of programming classes throughout my time as a CS student, completed an internship <br>
-			as a Software Developer for the ITA Group in West Des Moines, Iowa this past summer, and I also enjoy <br>
+	<h3> Technology Experience </h3>
+		<p> I've taken a variety of programming classes throughout my time as a CS student, completed an internship
+			as a Software Developer for the ITA Group in West Des Moines, Iowa this past summer, and I also enjoy
 			working on personal projects when time allows. I have experience in a variety of different technologies including:
+		</p>
 			<ul>
 				<li> Python </li>
 				<li> Swift </li>
@@ -37,17 +46,29 @@
 				<li> MySQL </li>
 				<li> C/C++ </li>
 			</ul>
-			My favorite programming language would probably be Python. I think it is a really awesome, versatile language<br>
-			that is used heavily in a variety of different industries like Data Science, Web Development, and Education.
+		<p>
+			My favorite programming language would probably be Python. I think it is a really awesome, versatile language
+			that is used heavily in a variety of different industries like Data Science, Web Development, and Education. When I graduate
+			I hope to find a job in Software Development or Big Data.
 		</p>
-	<h4> Hobbies </h4>
+
+	<h3> Hobbies </h3>
 		<ul>
 			<li> Golf </li>
 			<li> Boating </li>
 			<li> Playing Guitar </li>
-			<li> Video Games s</li>
+			<li> Video Games </li>
 		</ul>
+	</div>
 
+	<br><br><br>
+
+
+	<footer class="page-footer">
+		<p>
+			Copyright © Cody Hoffman 2017
+		</p>
+	</footer>
 </body>
 
 </html>
