--- a/resume.html
+++ b/resume.html
@@ -4,17 +4,29 @@
 	<head>
 		<meta charset="utf-8">
 		<title> Cody Hoffman </title>
+		<link rel="stylesheet" type="text/css" href="./style.css" />
 	</head>
 
 	<body>
-		<h1> Cody Hoffman's Web Page </h1>
 
-		<a href="/hw2/index.html"> Index </a>
-		
-		<br><br><br>
-		
-		<h3> FILE FOR RESUME </h3>
-		
+		<header>
+			<nav>
+				<ul style="list-style-type:none" id="menu">
+					<li><h1> Cody Hoffman </h1></li>
+					<li class="menuItem"> <a href="index.html"> Home </a> </li>
+					<li class="menuItem"> <a href="resume.html"> Resume </a> </li>
+					<li class="menuItem"> <a href="https://www.linkedin.com/in/cody-hoffman-618557121" > LinkedIn </a> </li>
+					<li class="menuItem"> <a href="https://github.com/codyhoffman" > GitHub </a> </li>
+					<li class="menuItem"> <a href="http://www.cody-codes.com" > Portfolio </a></li>
+				</ul>
+			</nav>
+		</header>
+		<footer class="page-footer">
+			<p>
+				Copyright © Cody Hoffman 2017
+			</p>
+		</footer>
+
 	</body>
 
 </html>
