Stopping point for tonight, working on formatting index for photos

--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!-- IMG_0253.JPG me kelsey and sam
+	 IMG_1600.JPG
+
+
+
+
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,10 +17,10 @@
 
 <body>
 
-	<div id="head">
+	<header>
 		<nav>
 			<ul style="list-style-type:none" id="menu">
-				<h1> Cody Hoffman </h1>
+				<li><h1> Cody Hoffman </h1></li>
 				<li class="menuItem"> <a href="index.html"> Home </a> </li>
 				<li class="menuItem"> <a href="resume.html"> Resume </a> </li>
 				<li class="menuItem"> <a href="https://www.linkedin.com/in/cody-hoffman-618557121" > LinkedIn </a> </li>
@@ -20,14 +28,14 @@
 				<li class="menuItem"> <a href="http://www.cody-codes.com" > Portfolio </a></li>
 			</ul>
 		</nav>
-	</div>
+	</header>
 
 	<br><br><br><br><br>
-	<div id="wrap">
+	<div>
 	<h3> Background </h3>
 		<ul>
 			<li> Hometown: Cascade, IA </li>
-			<li> Major: Computer Science </li>
+			<li> Major: Computer Engineering </li>
 			<li> Age: 21 </li>
 		</ul>
 
@@ -62,6 +70,21 @@
 	</div>
 
 	<br><br><br>
+
+	<div id="left">
+		<div class = "pic">
+			<img src ="./boat.jpg" alt = "Boating with friends" title= "Boating with friends" width = "300" height = "300">
+			<br>
+			<span>
+				Boating with friends
+			</span>
+			<img src ="./MeSamKelsey.jpg" alt = "Wedding with friends" title= "Wedding with friends" width = "300" height = "300">
+			<br>
+			<span>
+				At a wedding with friends
+			</span>
+		</div>
+	</div>
 
 
 	<footer class="page-footer">
