Formatted/styled the two pictures

--- a/index.html
+++ b/index.html
@@ -70,23 +70,32 @@
 	</div>
 
 	<br><br><br>
-
-	<div id="left">
+	
+	<p>
+	<div id="pictures">
 		<div class = "pic">
-			<img src ="./boat.jpg" alt = "Boating with friends" title= "Boating with friends" width = "300" height = "300">
-			<br>
-			<span>
-				Boating with friends
-			</span>
-			<img src ="./MeSamKelsey.jpg" alt = "Wedding with friends" title= "Wedding with friends" width = "300" height = "300">
-			<br>
-			<span>
-				At a wedding with friends
-			</span>
+		<img src ="./boat.jpg" alt = "Boating with friends" title= "Boating with friends" width = "320" height = "300">
+		<br>
+		<span> Boating with friends </span>
 		</div>
 	</div>
+	<div id="pictures"> 
+		<div class = "pic">
+		<img src ="./MeSamKelsey.jpg" alt = "Wedding with friends" title= "Wedding with friends" width = "320" height = "300">
+		<br>
+		<span> At a wedding with friends </span>
+		</div>
+	</div>
+	</p>
 
-
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
 	<footer class="page-footer">
 		<p>
 			Copyright © Cody Hoffman 2017
