Added resume content + styled, confirmed there were no errors with html checker

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<h3> Background </h3>
 		<ul>
 			<li> Hometown: Cascade, IA </li>
-			<li> Major: Computer Engineering </li>
+			<li> Major: Computer Science </li>
 			<li> Age: 21 </li>
 		</ul>
 
@@ -57,7 +57,7 @@
 		<p>
 			My favorite programming language would probably be Python. I think it is a really awesome, versatile language
 			that is used heavily in a variety of different industries like Data Science, Web Development, and Education. When I graduate
-			I hope to find a job in Software Development or Big Data.
+			I hope to find a job in Software Development or Data Science.
 		</p>
 
 	<h3> Hobbies </h3>
@@ -70,36 +70,25 @@
 	</div>
 
 	<br><br><br>
-	
-	<p>
+
 	<div id="pictures">
 		<div class = "pic">
-		<img src ="./boat.jpg" alt = "Boating with friends" title= "Boating with friends" width = "320" height = "300">
-		<br>
-		<span> Boating with friends </span>
+			<img src ="./boat.jpg" alt = "Boating with friends" title= "Boating with friends" width = "320" height = "300">
+			<br>
+			<span> Boating with friends </span>
 		</div>
-	</div>
-	<div id="pictures"> 
-		<div class = "pic">
-		<img src ="./MeSamKelsey.jpg" alt = "Wedding with friends" title= "Wedding with friends" width = "320" height = "300">
-		<br>
-		<span> At a wedding with friends </span>
-		</div>
-	</div>
-	</p>
 
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
+		<div class = "pic">
+			<img src ="./MeSamKelsey.jpg" alt = "Wedding with friends" title= "Wedding with friends" width = "320" height = "300">
+			<br>
+			<span> At a wedding with friends </span>
+		</div>
+	</div>
+
+	<br><br><br><br><br><br><br><br>
+
 	<footer class="page-footer">
-		<p>
-			Copyright © Cody Hoffman 2017
-		</p>
+		<p> Copyright © Cody Hoffman 2017 </p>
 	</footer>
 </body>
 
