--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,80 @@
 			</nav>
 		</header>
 
+		<div id="centerDiv">
 
+			<div>
+				<h2> Cody J. Hoffman
+				 	 534 S Lucas St Apt D - Iowa City, IA 52240<br>
+					 www.cody-codes.com - (319) 480-1727 - cody-hoffman@uiowa.edu
+				</h2>
+			</div>
+
+			<br>
+
+			<div>
+				<h2> Targeting an Entry-Level Opportunity in Software Development </h2>
+				<ul>
+					<li> Upcoming Computer Science graduate offering a strong foundation in software engineering and programming principles across an array of platforms. </li>
+					<li> Experienced in object-oriented programming; developing, testing and debugging code; designing interfaces; and the agile environment. </li>
+					<li> Able to quickly learn and master new technologies; successful experiences working in both team and self-directed environments. </li>
+				</ul>
+			</div>
+
+			<br>
+
+			<div>
+				<h2> Education </h2>
+				<h3> University of Iowa - Iowa City, IA <br>
+					 Bachelors in Computer Science <br>
+					 Graduation Date: May 2017
+				</h3>
+
+				<h3> Relevant Coursework: </h3>
+				<ul>
+					<li> Data Structures </li>
+					<li> Algorithms </li>
+					<li> Object-Oriented Software Development </li>
+					<li> Discrete Structures </li>
+					<li> Programming Language Concepts </li>
+					<li> Database Systems </li>
+					<li> Physics </li>
+					<li> Computer Organization and Architecture </li>
+					<li> Statistics </li>
+					<li> Intro to Networks and their Applications </li>
+				</ul>
+			</div>
+
+			<br>
+
+			<div>
+				<h2> Work Experience </h2>
+				<h3> Iowa Paper, Inc - Iowa City, IA <br>
+				 	 Web Design and Marketing Coordinator<br>
+				 	 August 2014 to Present
+				</h3>
+				<ul><li> Manage and design company website, including some light HTML work and verifying everything on the website is up to date and correct. Market the company and its products through social media, online advertisements, and local advertisements. Additionally, I help tend to customers that come into the store.</li></ul>
+
+				<h3> ITA Group - West Des Moines, IA<br>
+					 Software Developer Intern<br>
+					 May 2016 to August 2016
+				</h3>
+				<ul><li> Joined a team of two Software Developers, one Business Analyst, and one Quality Assurance Analyst, working in an agile environment, meeting deadlines and developing top quality software for fortune 500 and 1000 companies. I used tools such as: Visual Studio, C#, SQL, ASP.NET, JavaScript, HTML5, Entity Framework, AngularJS, MVC razor, Bootstrap, and TDD on a daily basis. </li></ul>
+			</div>
+
+			<br>
+
+			<div>
+				<h2> Technology Exposure </h2>
+				<h3> Programming Languages <br>
+					 Familiar: Java, C#, Swift, Ruby, SQL <br>
+					 Exposed: Objective-C, Python, F#, C, ML
+				</h3>
+				<h3> Other Software Development Tools <br>
+					Visual Studio, MVC3, Entity Framework, Git, SQL Server, JIRA, Bootstrap, Jenkins, BitBucket, SpecFlow, XCode, Rails
+				</h3>
+			</div>
+		</div>
 
 		<footer class="page-footer">
 			<p>
