fixed formatting issue with resume.html

--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,7 @@
 		<div id="centerDiv">
 
 			<div>
-				<h2> Cody J. Hoffman
+				<h2> Cody J. Hoffman<br>
 				 	 534 S Lucas St Apt D - Iowa City, IA 52240<br>
 					 www.cody-codes.com - (319) 480-1727 - cody-hoffman@uiowa.edu
 				</h2>
