--- a/resume.html
+++ b/resume.html
@@ -46,6 +46,7 @@
 
 			<div>
 				<h2> Education </h2>
+				<div id="margLeft">
 				<h3> University of Iowa - Iowa City, IA <br>
 					 Bachelors in Computer Science <br>
 					 Graduation Date: May 2017
@@ -64,12 +65,14 @@
 					<li> Statistics </li>
 					<li> Intro to Networks and their Applications </li>
 				</ul>
+				</div>
 			</div>
 
 			<br>
 
 			<div>
 				<h2> Work Experience </h2>
+				<div id="margLeft">
 				<h3> Iowa Paper, Inc - Iowa City, IA <br>
 				 	 Web Design and Marketing Coordinator<br>
 				 	 August 2014 to Present
@@ -81,12 +84,14 @@
 					 May 2016 to August 2016
 				</h3>
 				<ul><li> Joined a team of two Software Developers, one Business Analyst, and one Quality Assurance Analyst, working in an agile environment, meeting deadlines and developing top quality software for fortune 500 and 1000 companies. I used tools such as: Visual Studio, C#, SQL, ASP.NET, JavaScript, HTML5, Entity Framework, AngularJS, MVC razor, Bootstrap, and TDD on a daily basis. </li></ul>
+				</div>
 			</div>
 
 			<br>
 
 			<div>
 				<h2> Technology Exposure </h2>
+				<div id="margLeft">
 				<h3> Programming Languages <br>
 					 Familiar: Java, C#, Swift, Ruby, SQL <br>
 					 Exposed: Objective-C, Python, F#, C, ML
@@ -94,6 +99,7 @@
 				<h3> Other Software Development Tools <br>
 					Visual Studio, MVC3, Entity Framework, Git, SQL Server, JIRA, Bootstrap, Jenkins, BitBucket, SpecFlow, XCode, Rails
 				</h3>
+				</div>
 			</div>
 		</div>
 
